added AspectStorageService and AspectWriter extension point
The AspectStorageService is responsible for writing the aspect files into a directory contained in the workspace root. The AspectWriter extension allows to register writers that write individual parts of the aspect to this directory.